--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
                                 <div class="nav-bg-middle">
                                     <ul id="navbar-guide">
                                         <l1 class="nav-list">
-                                            <a href="#" class="nav-a bg-deepred"><img src="../img/header/nav-home.png" alt="Home"></a>
+                                            <a href="#" class="nav-a bg-deep"><img src="../img/header/nav-home.png" alt="Home"></a>
                                         </l1>
                                         <l1 class="nav-list">
                                             <a href="#" class="nav-a nav-hover-a"><img src="../img/header/nav-info.png" alt="정보검색"><img class="arrow" src="../img/arrow.png" alt="menuopenbtn"></a>
@@ -60,17 +60,17 @@
             <div class="header-sub-block-left">
                 <div class="header-sub-block-right">
                     <div class="route">
-                        <ul>
-                            <div class="route-flow-left">
-                                <div class="route-flow-right">
-                                    <div class="route-flow-middle">
+                        <div class="route-flow-left">
+                            <div class="route-flow-right">
+                                <div class="route-flow-middle">
+                                    <ul class="route-ul">
                                         <li><a href="#">Home</a></li>
                                         <li><a href="#">MyLibrary</a></li>
                                         <li>회원정보</li>
-                                    </div>
+                                    </ul>
                                 </div>
                             </div>
-                        </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -79,7 +79,7 @@
             <div class="sidebar-wrap">
                 <div class="right-category">
                     <div class="left-category">
-                        <h2 id="h2-category-logo">My Library</h2>
+                        <h2 id="h2-category-logo"><img src="../img/left-menu-txt.png" alt="MyLibrary"></h2>
                     </div>
                 </div>
                 <div class="bottom-category">
@@ -95,11 +95,11 @@
             </div>
             <div class="contents-box">
                 <div class="first-title">
-                    <h3 id="h3-SDI">맞춤정보(SDI) 신청</h3>
+                    <h3 id="h3-SDI"><img src="../img/h3-SDI.png" alt="맞춤정보(SDI)신청"></h3>
                 </div>
                 <div class="btn-section">
                     <label for="popupbtn" class="btn plus-btn btn-display">
-                        <span class="btn-right">
+                        <span class="btn-right-plus">
                             <span class="btn-middle">
                                 키워드등록
                             </span>
@@ -120,7 +120,7 @@
                         </span>
                     </a>
                     <div class="select-section">
-                        총 <strong>3건</strong>
+                        <span>총<strong>3건</strong></span>
                         <select name="status" id="output" title="출력현황">
                             <option value="10개 출력현황">10개 출력</option>
                             <option value="9개 출력현황">9개 출력</option>
@@ -261,10 +261,10 @@
                         </span>
                     </a>
                 </div>
-                <h4 id="Info">제공정보</h4>
+                <h4 id="Info"><img src="../img/h4-info.png" alt="제공정보"></h4>
                 <div class="btn-section">
                     <div class="select-section">
-                        총 <span><strong>2건</strong></span>
+                        <span>총<strong>2건</strong></span>
                     </div>
                 </div>
                 <table class="table2">
@@ -670,8 +670,8 @@
                 <a href="#header-wrap">LinkSaaS</a>
             </div>
             <div class="footer-contents">
-                <address>대전광역시 유성구 관평동 1359번지 한산에스메가 631호 LinkSaaS TEL:(042) 863-0850 FAX:(042) 330-0055</address>
-                <p>All Contents copylight(C) 2000. reserverd by LinkSaaS.CO.,LTD</p>
+                <address><img src="../img/footer/footer-address.png" alt="대전광역시 유성구 관평동 1359번지 한산에스메가 631호 LinkSaaS TEL:(042) 863-0850 FAX:(042) 330-0055"></address>
+                <div class="copyright"><img src="../img/footer/footer-copyright.png" alt="All Contents copylight(C) 2000. reserverd by LinkSaaS.CO.,LTD"></div>
             </div>
         </div>
     </footer>
