--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
                                 <div class="nav-bg-middle">
                                     <ul id="navbar-guide">
                                         <l1 class="nav-list">
-                                            <a href="#" class="nav-a bg-deep"><img src="../img/header/nav-home.png" alt="Home"></a>
+                                            <a href="#" class="nav-a bg-deep nav-pd-1"><img src="../img/header/nav-home.png" alt="Home"></a>
                                         </l1>
                                         <l1 class="nav-list">
                                             <a href="#" class="nav-a nav-hover-a"><img src="../img/header/nav-info.png" alt="정보검색"><img class="arrow" src="../img/arrow.png" alt="menuopenbtn"></a>
@@ -32,14 +32,14 @@
                                             </ul>
                                         </l1>
                                         <l1 class="nav-list">
-                                            <a href="#" class="nav-a nav-hover-a"><img src="../img/header/nav-info2.png" alt="전자정보"><img class="arrow" src="../img/arrow.png" alt="menuopenbtn"></a>
+                                            <a href="#" class="nav-a nav-pd-3 nav-hover-a"><img class="nav-default-info" src="../img/header/nav-info2.png" alt="전자정보"><img class="nav-hover-info" src="../img/dropmenu/info-hov.png" alt="전자정보(hover)"><img class="arrow" src="../img/arrow.png" alt="menuopenbtn"></a>
                                             <ul class="hover-popup">
                                                 <li class="hover-popup-list"><a href="#">논문검색</a></li>
                                                 <li class="hover-popup-list"><a href="#">단행본검색</a></li>
                                             </ul>
                                         </l1>
                                         <l1 class="nav-list">
-                                            <a href="#" class="nav-a nav-c nav-hover-a"><img src="../img/header/nav-ml.png" alt="MyLibrary"><img class="arrow" src="../img/arrow.png" alt="menuopenbtn"></a>
+                                            <a href="#" class="nav-a nav-c nav-pd-4 nav-hover-a"><img src="../img/header/nav-ml.png" alt="MyLibrary"><img class="arrow" src="../img/arrow.png" alt="menuopenbtn"></a>
                                             <ul class="hover-popup">
                                                 <li class="hover-popup-list"><a href="#">논문검색</a></li>
                                                 <li class="hover-popup-list"><a href="#">단행본검색</a></li>
