--- a/html/index.html
+++ b/html/index.html
@@ -598,56 +598,36 @@
         <div class="real-wrap2">
             <div class="exit-btn"><label for="popupbtn"></label></div>
             <div class="wrap-popup2">
-                <div class="header2">
-                    <div class="header-section-right2">
-                        <div class="header-section-middle2">
-                            <h1 id="title-head2">키워드 등록</h1>
-                        </div>
-                    </div>
+                <div class="keyword-banner">
+                    <img src="../img/keyword-banner.png" alt="키워드등록">
                 </div>
                 <div class="popup-contents-box">
                     <p>관심분야의 키워드를 등록하면 해당하는 신착도서와 저널정보를 받아볼 수 있습니다.</p>
                     <div class="chart-section">
                         <form action="#">
                             <div class="keyword-search-container">
-                                <span class="keyword-btn-left">
-                                    <span class="keyword-btn-right">
-                                        <span class=" keyword-btn-middle-first">
-                                            <span class="circle-arrow">서명키워드</span>
-                                        </span>
-                                    </span>
-                                </span>
-                                <input class="keyword-search" type="text" id="infomation" readonly>
+                                <label for="name-kw" class="kw-label">
+                                    <img src="../img/keyword/name-kw.png" alt="서명키워드">
+                                </label>
+                                <input class="keyword-search" type="text" id="name-kw" readonly>
                             </div>
                             <div class="keyword-search-container">
-                                <span class="keyword-btn-left">
-                                    <span class="keyword-btn-right">
-                                        <span class=" keyword-btn-middle">
-                                            <span class="circle-arrow">저자명키워드</span>
-                                        </span>
-                                    </span>
-                                </span>
-                                <input class="keyword-search" type="text" id="infomation" readonly>
+                                <label for="wrter-kw" class="kw-label">
+                                    <img src="../img/keyword/writer-kw.png" alt="저자명키워드">
+                                </label>
+                                <input class="keyword-search" type="text" id="wrter-kw" readonly>
                             </div>
                             <div class="keyword-search-container">
-                                <span class="keyword-btn-left">
-                                    <span class="keyword-btn-right">
-                                        <span class=" keyword-btn-middle">
-                                            <span class="circle-arrow">출판사키워드</span>
-                                        </span>
-                                    </span>
-                                </span>
-                                <input class="keyword-search" type="text" id="infomation" readonly>
+                                <label for="publ-kw" class="kw-label">
+                                    <img src="../img/keyword/publ-kw.png" alt="출판사키워드">
+                                </label>
+                                <input class="keyword-search" type="text" id="publ-kw" readonly>
                             </div>
                             <div class="keyword-search-container">
-                                <span class="keyword-btn-left">
-                                    <span class="keyword-btn-right">
-                                        <span class=" keyword-btn-middle">
-                                            <span class="circle-arrow">주제명키워드</span>
-                                        </span>
-                                    </span>
-                                </span>
-                                <input class="keyword-search" type="text" id="infomation" readonly>
+                                <label for="subj-kw" class="kw-label">
+                                    <img src="../img/keyword/subj-kw.png" alt="주제명키워드">
+                                </label>
+                                <input class="keyword-search" type="text" id="subj-kw" readonly>
                             </div>
                         </form>
                     </div>
