--- a/html/index.html
+++ b/html/index.html
@@ -414,7 +414,9 @@
                                                 <option value="서명">서명</option>
                                                 <option value="홍길동">홍길동</option>
                                             </select>
-                                            <input type="text" placeholder="Search..." id="searching">
+                                            <div id="searching">
+                                                <input type="text" placeholder="Search...">
+                                            </div>
                                             <button class="searching-btn"></button>
                                         </form>
                                     </div>
